--- a/mdemaravilhosa-reprograma/css/style.css
+++ b/mdemaravilhosa-reprograma/css/style.css
@@ -2,69 +2,132 @@
 
 *{
 margin: 0;
-font-family: 'Montserrat', sans-serif;
-/* font-family: 'Roboto', sans-serif; */
+font-family: 'Roboto', sans-serif;
 }
 
 /* NAVEGAÇÃO */
+/*MOBILE */
 
-.topbar{
+nav {
 background-color: #63458a;
-display:flex;
-justify-content: space-around;
+display: flex;
+justify-content: center;
+align-items: center;
+padding: 3% 0;
+box-shadow: 5px -9px 3px #000;
+
 }
 
-nav ul {
+nav > div {
 display: flex;
 justify-content: space-between;
-list-style: none;
-color: white;
-margin-top: 25px;
+align-items: center;
+width: 100%;
 }
 
-nav ul a {
-color: white;
-text-decoration:none;
-padding: 50px 10px 10px 60px;
+.topbar img {
+    width: 35%;
+    padding: 1% 5%;
+    max-width: 200px;
+}
+
+nav div ul {
+    display: none;
+}
+
+.mobilebtn {
+    display: inline;
+    text-align: right;
+}
+
+/* DESKTOP respnsive */
+/* navegação Desktop */
+
+@media (min-width: 1024px) {
+
+    .mobilebtn {
+        display: none;
+    }
+
+    nav{
+    position: fixed;
+    z-index: 1;
+    width: 100%;    
+    padding:0;
+    }
+
+    nav > div {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        width: 100%;
+    }
+    
+    nav div ul {
+        text-align: right;
+        display: flex;
+        justify-content: flex-end;
+        width: 80%;
+        padding-right: 3%;
+    }
+    
+    nav div ul li {
+        text-decoration: none;
+        font-size: 14px;
+        display: inline-block;
+        width: 10%;
+    }
+    
+    nav div ul li a {
+        text-decoration: none;
+        color: white;
+    } 
 }
 
 
 /* HEADER */
+/* Mobile 1st */
 
-header{
-background-image: url("../img/bg-banner-claro.png");
+header {
+background: url(../img/bg-banner-claro.png);
 background-size: cover;
-min-height: 80vh;  
+min-height: 30vh;
+background-repeat: no-repeat;
+background-position: 45%;
+}
+
+header div {
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+color:  white;
 text-align: left;
 }
 
 .textoheader{
-font-family: 'Roboto', sans-serif;
 color: white;
 text-align: left;
 max-width: 100%;
-padding: 230px 0px 0px 100px;
+padding: 10%;
 }
 
 .textoheader p{
-font-family: 'Roboto', sans-serif;
-width: 40%;
+width: 100%;
 line-height: 1.5em;
-margin-bottom: 30px;
-font-size: 18px;
+margin-bottom: 25%;
+margin-top: 10%;
+font-size: 15px;
 } 
 
 header > h1{
-font-family: 'Roboto', sans-serif;
-font-weight: 900;
-font-size: 40px;
+font-size: 30px;
 font-weight: bold;
 }
 
 header a{
-font-family: 'Roboto', sans-serif;
-list-style: none;
 color: white;
+list-style: none;
 text-decoration:none;
 font-size: 20px;
 background-color: #9a48d0;
@@ -73,40 +136,114 @@ text-transform: uppercase;
 border-radius: 9px;
 }
 
+/* HEADER Responsive Desktop */
+
+    @media (min-width: 1024px) {
+
+    header {
+        min-height: 70vh;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: flex-end;     
+    }
+
+    header div {
+        width: 70%;
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-end;
+        text-align: left;     
+        min-height: inherit;
+    }
+
+    .textoheader{
+        color: white;
+        text-align: left;
+        max-width: 100%;
+          }
+        
+        .textoheader p{
+        width: 60%;
+        line-height: 1.5em;
+        font-size: 120%;
+        margin-bottom: 5%;
+        margin-top: 2%;
+        }
+
+        header > h1{
+         font-size: 30%;
+        font-weight: bold;
+        }
+
+        header a{
+        list-style: none;
+        color: white;
+        text-decoration:none;
+        font-size: 20px;
+        background-color: #9a48d0;
+        padding: 10px 39px 13px 35px;
+        text-transform: uppercase;
+        border-radius: 9px;
+        } 
+}
+
 /* INTRODUÇÃO */
 
-.intro{
-    /* background-color: #7e5a9b; */
-}
+/* Mobile */
+
+
+/* Desktop */
+
 .about{
-background-color: #7e5a9b;
-display: block;
-align-items: center;
-width: 100%;
-height: 500px;
-color: white;
-margin-bottom: 0;
+    background-color: #7e5a9b;
+    display: block;
+    align-items: center;
+    width: 100%;
+    height: 300px;
+    color: white;
+    margin-bottom: 0;
+    }
+    
+    .about img{
+    width: 20%;
+    position:relative;
+    left:40%;
+    margin-top:5%;
+    }
+
+    .about > p{
+        position:relative;
+        left:25%;
+        width: 50%;
+        text-align: center;
+        font-size: 14px;
+        line-height: 1.5em;
+        }
+    
+
+@media (min-width: 1024px) {
+    .about{
+        background-color: #7e5a9b;
+        display: block;
+        align-items: center;
+        width: 100%;
+        height: 500px;
+        color: white;
+        margin-bottom: 0;
+        }
+
+        .about > p{
+        position:relative;
+        left:25%;
+        width: 50%;
+        text-align: center;
+        font-size: 20px;
+        line-height: 1.5em;
+        }
 }
 
-.about img{
-width: 20%;
-position:relative;
-left:40%;
-margin-top:5%;
-}
 
-.about > p{
-font-family: 'Roboto', sans-serif;
-position:relative;
-left:25%;
-width: 50%;
-text-align: center;
-font-size: 20px;
-line-height: 1.5em;
-}
-
-
-/*  SAIBA MAIS > + Flex Wrap */
+/*  SAIBA MAIS > + Flex Wrap RESPONSIVE */
 
 
 .mulheres{
@@ -158,7 +295,7 @@ text-transform: uppercase;
 border-radius: 9px;
 } 
 
-/* EQUIPE */
+/* EQUIPE / WRAP RESPONSIVE */
 .equipe{
 background-color: #63458a;
 padding-bottom: 4px;
@@ -166,7 +303,6 @@ padding-bottom: 4px;
 
 .grade-equipe h2{
 font-size:30px;
-font-family: 'Roboto', sans-serif;
 text-align: center;
 color:white;
 padding-top: 50px;
@@ -176,32 +312,36 @@ padding-bottom: 50px;
 
 
 /* FOOTER */
-
-/* bloco 001  */
 footer{
 background-color: rgb(27, 26, 26);
 }
+
+/* MOBILE 1ST
+ bloco 001  */
 
 .rodape{
 padding-top: 30px;
 display: flex;
 justify-content: space-between;
-width: 900px;
+width: 100%;
 margin: 0 auto;
 padding-bottom: 30px;
-
 }
 
 .nvfooter ul {
 list-style: none;
+text-decoration:none;
 color: white;
 margin-top: 25px;
-text-decoration:none;
 list-style: none;
 line-height: 2.5em;
 font-size: 10px;
-}
 
+padding-right: 25px;
+padding-left: 15px;
+margin-left: 0;
+
+}
 .nvfooter ul a {
 color: white;
 text-decoration:none;
@@ -210,14 +350,18 @@ text-decoration:none;
 /* bloco 002 */
 
 .brand-footer a img{
-max-width: 200px;
+max-width: 100%;
+
+margin-top: 8%;
 }
 
 .brand-footer p{
 color: white;
 font-size: 8px;
 text-align: center;
-width: 200px;
+width: 100%;
+
+margin-top: 2%;
 }
 
 /* bloco 03 */
@@ -227,13 +371,16 @@ display: flex;
 justify-content: space-between;
 align-content: center;
 align-items: center;
-width: 150px;
-padding-top: 40px;
+width: 100%;
+padding-right: 15px;
 }
 
 .socialmedia a img{
-max-width: 20px;
-padding-right: 10px;
+max-width: 15px;
+
+padding-right: 5px;
+
+padding-left: 20px;
 
 }
 
@@ -241,10 +388,51 @@ padding-right: 10px;
 text-decoration:none;
 list-style: none;
 color:white;
-font-size:10px;
+font-size:9px;
 }
+
 .socialmedia p {
-    padding-top: 30px;
+    padding-top: 20px; 
+    
+}
+
+
+
+
+
+
+@media (min-width: 1024px) {
+.rodape{
+    width: 900px;
+ }
+       
+    .brand-footer a img{
+    max-width: 200px;
+    }
+    
+    .brand-footer p{
+    width: 200px;
+    }
+    
+
+    
+    .socialmedia{
+     width: 150px;
+    padding-top: 40px;
+    }
+    
+    .socialmedia a img{
+    max-width: 20px;
+    padding-right: 10px;
+    
+    }
+    
+    .socialmedia a{
+     font-size:10px;
+    }
+    .socialmedia p {
+        padding-top: 30px;
+    }
 }
 
 
